--- a/index.html
+++ b/index.html
@@ -5,44 +5,64 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
   <link rel="stylesheet" href="./style.css">
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  <script src="script.js" defer></script>
   
   <title>Frontend Mentor | Interactive rating component</title>
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   <style>
-    .attribution { font-size: 11px; text-align: center; }
+    .attribution { font-size: 11px; text-align: center; position:absolute;bottom: 0}
     .attribution a { color: hsl(228, 45%, 44%); }
   </style>
 </head>
 <body>
-
+  <main>
   <!-- Rating state start -->
-  How did we do?
+   <section id="rating-section" class="rating">
+    <div class="top">
+    <img alt="star" src="images/icon-star.svg" class="star">
+    </div>
+    <div class="text-main">
+    <div class="text-L">How did we do?</div>
 
-  Please let us know how we did with your support request. All feedback is appreciated 
-  to help us improve our offering!
-
-  1 2 3 4 5
-
+  <div class="text-M color-gray">Please let us know how we did with your support request. All feedback is appreciated 
+  to help us improve our offering!</div>
+    </div>
+  <div id="rating-buttons" class="rating-buttons">
+   <button rating="1" class="active">1</button>
+   <button rating="2">2</button>
+   <button rating="3">3</button>
+   <button rating="4">4</button>
+   <button rating="5">5</button>
+  </div>
+  <button id="rating-submit-button" class="submit" type="submit">
   Submit
+  </button>
 
   <!-- Rating state end -->
+   </section>
 
   <!-- Thank you state start -->
-
-  You selected <!-- Add rating here --> out of 5
-
+   <section id="thank-you-section" class="thank-you hidden">
+    <img alt="thank you illustration" src="images/illustration-thank-you.svg" class="thank-you-ill">
+    <div class="selected-text">
+  You selected <a id="out-of"></a> out of 5
+    </div>
+<div class="text-L">
   Thank you!
-
+</div>
+<div class="text-M color-gray">
   We appreciate you taking the time to give a rating. If you ever need more support, 
   don’t hesitate to get in touch!
+</div>
 
   <!-- Thank you state end -->
-
+   </section>
+  </main>
   
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+    Coded by <a href="#">Rohloffmeister</a>.
   </div>
 </body>
 </html>
