--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
    <button rating="5">5</button>
   </div>
   <button id="rating-submit-button" class="submit" type="submit">
-  Submit
+  SUBMIT
   </button>
 
   <!-- Rating state end -->
